--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "body-parser": "^1.17.2",
+    "json-server": "^0.10.3",
     "vue": "^2.3.3",
+    "vue-resource": "^1.3.4",
     "vue-router": "^2.7.0"
   },
   "devDependencies": {
